# SmartPlatform

./: CMakeLists.txt  Makefile  README.md  TODO.txt  helloworld.cpp
Include/: FreeRTOSConfig.h
Source/: helloworld.c
arch/CMSIS/Device/STM32F3xx/Include/: stm32f301x8.h  stm32f302x8.h  stm32f302xc.h  stm32f302xe.h  stm32f303x8.h  stm32f303xc.h  stm32f303xe.h  stm32f318xx.h  stm32f328xx.h  stm32f334x8.h  stm32f358xx.h  stm32f373xc.h  stm32f378xx.h  stm32f398xx.h
arch/CMSIS/Device/STM32F4xx/Include/: stm32f401xc.h  stm32f401xe.h  stm32f405xx.h  stm32f407xx.h  stm32f410cx.h  stm32f410rx.h  stm32f410tx.h  stm32f411xe.h  stm32f412cx.h  stm32f412rx.h  stm32f412vx.h  stm32f412zx.h  stm32f413xx.h  stm32f415xx.h  stm32f417xx.h  stm32f423xx.h  stm32f427xx.h  stm32f429xx.h  stm32f437xx.h  stm32f439xx.h  stm32f446xx.h  stm32f469xx.h  stm32f479xx.h
arch/CMSIS/Device/Script/: freertos.ld  nosys.ld
arch/ldscripts/: gcc.ld  multi-ram.ld  nokeep.ld
board/common/Include/: boardcfg.h  device.h  ioctl.h  system.h
board/common/Source/: retarget.c  serialport.c
board/stm3210c_eval/: stm3210c_eval-nosys.ld  stm3210c_eval.ld  stm32f4xx_hal_conf.h
board/stm3210c_eval/Script/: stm3210c_eval-freertos.ld  stm3210c_eval-nosys.ld
board/stm3210c_eval/Source/: stm32f4xx_hal_msp.c
board/stm32f4_discovery/Include/: stm32f4xx_hal_conf.h
board/stm32f4_discovery/Script/: stm32f4_discovery-freertos.ld
board/stm32f4_discovery/Source/: gpscom.c  ledgpio.c  retarget.c  stm32f4xx_hal_msp.c  system.c  trace.c
board/waveshare/Include/: stm32f4xx_hal_conf.h
board/waveshare/Source/: aithinker_a7.c  gpscom.c  ledgpio.c  trace.c  w5300.c
cmake/: CMakeLists.txt  Generic-GCC.cmake  board-config-stm3210c_eval.cmake  board-config-stm32f4_discovery.cmake  core.cmake  generic-gcc-app.cmake  generic-gcc-platform.cmake  generic-gcc-stm32.cmake  generic-gcc.cmake  lwip.cmake  rtos-freertos.cmake  toolchain-arm-none-eabi.cmake
cmake/Application/: CMakeLists.txt
cmake/Boards/: waveshare.cmake
cmake/Platform/: CMakeLists.txt
docs/: ClassDiagram.tex  Taichi.tex  amplifier.tex  plot.tex  statemachine.tex
freertos/Source/: tasks.c
freertos/Source/include/: task.h
freertos/Source/portable/Common/: mpu_wrappers.c
freertos/Source/portable/GCC/ARM_CM0/: portmacro.h
freertos/Source/portable/GCC/ARM_CM3_MPU/: portmacro.h
freertos/Source/portable/GCC/ARM_CM4F/: portmacro.h
freertos/Source/portable/GCC/ARM_CM7/r0p1/: portmacro.h
helloworld/: CMakeLists.txt  FreeRTOSConfig.h  main.c
openocd/: waveshare.cfg
platform/Include/: FreeRTOSConfig.h  location.h  module.h  module_config.h  network.h  w5300.h
platform/Source/: location.c  main.c  network.c  stdio.c  system.c  test.c  timer.c  utils.c
platform/lwip/Include/: lwipopts.h
platform/lwip/Include/arch/: cc.h  sys_arch.h
platform/lwip/Source/: sys_arch.c
