CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

ENABLE_LANGUAGE(ASM-ATT)

SET(STM32_PLATFORM_TOP ${CMAKE_CURRENT_LIST_DIR})

INCLUDE(${STM32_PLATFORM_TOP}/cmake/board-config-${STM32_PLATFORM_BOARD_NAME}.cmake)

INCLUDE(${STM32_PLATFORM_TOP}/cmake/Generic-GCC.cmake)

PROJECT(hello)

LIST(APPEND SRC_LIST helloworld.c)

ADD_EXECUTABLE(hello ${SRC_LIST})
