CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(STM32_PLATFORM_TOP ${CMAKE_CURRENT_LIST_DIR}/..)

SET(STM32_PLATFORM_USE_FREERTOS true)

SET(STM32_PLATFORM_TARGET_NAME ${STM32_PLATFORM_BOARD_NAME}-image)

INCLUDE(${STM32_PLATFORM_TOP}/cmake/core.cmake)

INCLUDE_DIRECTORIES(${STM32_PLATFORM_TOP}/Include)

AUX_SOURCE_DIRECTORY(${STM32_PLATFORM_TOP}/Source SRC_LIST)

PROJECT(${STM32_PLATFORM_TARGET_NAME})

ADD_EXECUTABLE(${STM32_PLATFORM_TARGET_NAME} ${SRC_LIST})

CREATE_IMAGE(${STM32_PLATFORM_TARGET_NAME})
