CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(SMART_PLATFORM_TOP ${CMAKE_CURRENT_LIST_DIR}/..)

SET(SMART_PLATFORM_TARGET_NAME ${STM32_PLATFORM_BOARD_NAME})

INCLUDE(${SMART_PLATFORM_TOP}/cmake/Boards/${STM32_PLATFORM_BOARD_NAME}.cmake)

SET(CMAKE_TOOLCHAIN_FILE ${SMART_PLATFORM_TOP}/cmake/toolchain-arm-none-eabi.cmake)

INCLUDE(${SMART_PLATFORM_TOP}/cmake/generic-gcc.cmake)

INCLUDE_DIRECTORIES(${SMART_PLATFORM_TOP}/platform/Include)

AUX_SOURCE_DIRECTORY(${SMART_PLATFORM_TOP}/platform/Source SRC_LIST)

PROJECT(${SMART_PLATFORM_TARGET_NAME})

ADD_EXECUTABLE(${SMART_PLATFORM_TARGET_NAME} ${SRC_LIST})

CREATE_IMAGE(${SMART_PLATFORM_TARGET_NAME})
