CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(STM32_PLATFORM_USE_FREERTOS "true")

INCLUDE(${CMAKE_CURRENT_LIST_DIR}/../cmake/core.cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

PROJECT(hello)

IF(STM32_PLATFORM_USE_FREERTOS STREQUAL "true")
    LIST(APPEND SRC_LIST main.c)
ELSE()
    LIST(APPEND SRC_LIST helloworld.c)
ENDIF()

ADD_EXECUTABLE(hello ${SRC_LIST})

CREATE_IMAGE(hello)
