CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(STM32_PLATFORM_USE_FREERTOS false)

SET(STM32_PLATFORM_TARGET_NAME hello)

INCLUDE(${CMAKE_CURRENT_LIST_DIR}/../cmake/core.cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

LIST(APPEND SRC_LIST helloworld.c)

PROJECT(${STM32_PLATFORM_TARGET_NAME})

ADD_EXECUTABLE(${STM32_PLATFORM_TARGET_NAME} ${SRC_LIST})

CREATE_IMAGE(${STM32_PLATFORM_TARGET_NAME})
