CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(STM32_PLATFORM_TOP ${CMAKE_CURRENT_LIST_DIR}/../..)

SET(STM32_PLATFORM_BUILD_APP false)

SET(STM32_PLATFORM_TARGET_NAME ${STM32_PLATFORM_BOARD_NAME}-Platform)

INCLUDE(${STM32_PLATFORM_TOP}/cmake/core.cmake)

INCLUDE_DIRECTORIES(${STM32_PLATFORM_TOP}/platform/Include)

PROJECT(${STM32_PLATFORM_TARGET_NAME})

ADD_LIBRARY(${STM32_PLATFORM_TARGET_NAME} STATIC ${SRC_LIST})
