CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(STM32_PLATFORM_TOP ${CMAKE_CURRENT_LIST_DIR}/../..)

SET(STM32_PLATFORM_BUILD_APP false)

SET(STM32_PLATFORM_TARGET_NAME ${STM32_PLATFORM_BOARD_NAME}-Platform)

INCLUDE(${STM32_PLATFORM_TOP}/cmake/Boards/${STM32_PLATFORM_BOARD_NAME}.cmake)

SET(CMAKE_TOOLCHAIN_FILE ${STM32_PLATFORM_TOP}/cmake/toolchain-arm-none-eabi.cmake)

INCLUDE(${STM32_PLATFORM_TOP}/cmake/generic-gcc.cmake)

INCLUDE_DIRECTORIES(${STM32_PLATFORM_TOP}/platform/Include)

AUX_SOURCE_DIRECTORY(${STM32_PLATFORM_TOP}/platform/Source SRC_LIST)

PROJECT(${STM32_PLATFORM_TARGET_NAME})

ADD_EXECUTABLE(${STM32_PLATFORM_TARGET_NAME} ${SRC_LIST})

CREATE_IMAGE(${STM32_PLATFORM_TARGET_NAME})

# ADD_LIBRARY(${STM32_PLATFORM_TARGET_NAME} STATIC ${SRC_LIST})
